@@ -13609,3 +13609,164 @@ Z9
 ])
 
 AT_CLEANUP
+
+
+# Verify that FD GLOBAL will create default handlers in sub-programs, but
+# only in its own sub-programs
+
+AT_SETUP([Scope of FD GLOBAL in nested programs])
+AT_KEYWORDS([file])
+AT_DATA([prog.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. NESTED-FILES.
+       PROCEDURE DIVISION.
+         CALL    "NESTED-PROGRAM-1".
+         CALL    "NESTED-PROGRAM-2".
+         STOP RUN.
+
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. NESTED-PROGRAM-1.
+       ENVIRONMENT DIVISION.
+       INPUT-OUTPUT SECTION.
+       FILE-CONTROL.
+         SELECT FILE-EXT ASSIGN "./TEST-FILE" FILE STATUS IS WSFS.
+       DATA DIVISION.
+       FILE SECTION.
+       FD FILE-EXT GLOBAL.
+       01 FILE-EXT-REC PIC X(5).
+       WORKING-STORAGE SECTION.
+       01  WSFS              PIC X(2).
+       PROCEDURE DIVISION.
+       DECLARATIVES.
+       P01 SECTION.
+          USE AFTER ERROR PROCEDURE ON FILE-EXT.
+       P0101.
+          DISPLAY "ERROR ON FILE-EXT".
+       P02 SECTION.
+          USE AFTER ERROR PROCEDURE ON OUTPUT.
+       P0201.
+          DISPLAY "ERROR ON OUTPUT".
+       END DECLARATIVES.
+       MAIN SECTION.
+         OPEN OUTPUT FILE-EXT.
+         CALL    "NESTED-PROGRAM-1-1".
+      * The next line triggers a SILENT error in NESTED-PROGRAM-1-2
+         CLOSE FILE-EXT.
+         CALL    "NESTED-PROGRAM-1-2".
+         GOBACK.
+
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. NESTED-PROGRAM-1-1.
+       PROCEDURE DIVISION.
+         NESTED-PROGRAM .
+         WRITE FILE-EXT-REC FROM "Hello".
+	 DISPLAY "1-1 TRIED TO WRITE".
+         GOBACK.
+       END PROGRAM NESTED-PROGRAM-1-1.
+
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. NESTED-PROGRAM-1-2.
+       PROCEDURE DIVISION.
+         NESTED-PROGRAM .
+         WRITE FILE-EXT-REC FROM "Hello".
+	 DISPLAY "1-2 TRIED TO WRITE".
+         GOBACK.
+       END PROGRAM NESTED-PROGRAM-1-2.
+
+       END PROGRAM NESTED-PROGRAM-1.
+
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. NESTED-PROGRAM-2.
+       PROCEDURE DIVISION.
+         GOBACK.
+       END PROGRAM NESTED-PROGRAM-2.
+
+       END PROGRAM NESTED-FILES.
+])
+AT_CHECK([$COMPILE prog.cob], [0], [], [])
+AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [1-1 TRIED TO WRITE
+1-2 TRIED TO WRITE
+], [])
+AT_DATA([prog2.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. NESTED-FILES.
+       PROCEDURE DIVISION.
+         CALL    "NESTED-PROGRAM-1".
+         CALL    "NESTED-PROGRAM-2".
+         STOP RUN.
+
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. NESTED-PROGRAM-1.
+       ENVIRONMENT DIVISION.
+       INPUT-OUTPUT SECTION.
+       FILE-CONTROL.
+         SELECT FILE-EXT ASSIGN "./TEST-FILE" FILE STATUS IS WSFS.
+       DATA DIVISION.
+       FILE SECTION.
+       FD FILE-EXT GLOBAL.
+       01 FILE-EXT-REC PIC X(5).
+       WORKING-STORAGE SECTION.
+       01  WSFS              PIC X(2).
+       PROCEDURE DIVISION.
+       DECLARATIVES.
+       P01 SECTION.
+      * This one is GLOBAL and should be called from within nested programs
+          USE GLOBAL AFTER ERROR PROCEDURE ON FILE-EXT.
+       P0101.
+          DISPLAY "ERROR ON FILE-EXT".
+       P02 SECTION.
+          USE AFTER ERROR PROCEDURE ON OUTPUT.
+       P0201.
+          DISPLAY "ERROR ON OUTPUT".
+       END DECLARATIVES.
+       MAIN SECTION.
+         OPEN OUTPUT FILE-EXT.
+         CALL    "NESTED-PROGRAM-1-1".
+	 DISPLAY "CLOSING FILE DESCRIPTOR".
+         CLOSE FILE-EXT.
+         CALL    "NESTED-PROGRAM-1-2".
+         GOBACK.
+
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. NESTED-PROGRAM-1-1.
+       PROCEDURE DIVISION.
+         NESTED-PROGRAM .
+	 DISPLAY "ENTERING NESTED-PROGRAM-1-1".
+	 DISPLAY "TRYING TO WRITE".
+         WRITE FILE-EXT-REC FROM "Hello".
+	 DISPLAY "EXITING NESTED-PROGRAM-1-1".
+         GOBACK.
+       END PROGRAM NESTED-PROGRAM-1-1.
+
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. NESTED-PROGRAM-1-2.
+       PROCEDURE DIVISION.
+         NESTED-PROGRAM .
+	 DISPLAY "ENTERING NESTED-PROGRAM-1-2".
+	 DISPLAY "TRYING TO WRITE".
+         WRITE FILE-EXT-REC FROM "Hello".
+	 DISPLAY "EXITING NESTED-PROGRAM-1-2".
+         GOBACK.
+       END PROGRAM NESTED-PROGRAM-1-2.
+
+       END PROGRAM NESTED-PROGRAM-1.
+
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. NESTED-PROGRAM-2.
+       PROCEDURE DIVISION.
+         GOBACK.
+       END PROGRAM NESTED-PROGRAM-2.
+
+       END PROGRAM NESTED-FILES.
+])
+AT_CHECK([$COMPILE prog2.cob], [0], [], [])
+AT_CHECK([$COBCRUN_DIRECT ./prog2], [0], [ENTERING NESTED-PROGRAM-1-1
+TRYING TO WRITE
+EXITING NESTED-PROGRAM-1-1
+CLOSING FILE DESCRIPTOR
+ENTERING NESTED-PROGRAM-1-2
+TRYING TO WRITE
+ERROR ON FILE-EXT
+EXITING NESTED-PROGRAM-1-2
+], [])
+AT_CLEANUP
